--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Karla:wght@400;800&display=swap" rel="stylesheet">
+
     <title>Password Generator</title>
 </head>
 <body>
-    <h1 id="password-el"></h1>
+    <main>
+        <div id="form-container">
+            <div id="title-container">
+                <h1 id="main-title">Generate a <span>random password</span></h1>
+                <h4 id="sub-title">Never use an insecure password again.</h4>
+            </div>
+            <div id="button-container">
+                <button onclick="processPasswords()">Generate passwords</button>
+            </div>
+            <div id="password-container">
+                <div class="password" id="password-one"></div>
+                <div class="password" id="password-two"></div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
